--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "LightRacer-v2-Server",
   "version": "0.0.0",
   "dependencies": {
-    "nodejs-websocket": "1.2.1"
+    "socket.io": "1.3.6"
   }
 }
