--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "port": 8001,
-  "maxplayers": 1,
+  "maxplayers": 2,
   "action": {
     "list": "list",
     "create": "create",
@@ -14,6 +14,7 @@
       "x": 1000,
       "y": 1000
     },
+    "speed": 100,
     "directions": [2, 4, 8, 16]
   }
 }
