--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "LightRacer-v2-Server",
   "version": "0.0.0",
   "dependencies": {
-    "socket.io": "1.3.6"
+    "socket.io": "1.3.6",
+    "cluster": "0.7.7",
+    "mainloop.js": "1.0.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
